ArduEasyMaven/gen/ArduEasyParser.java
// Generated from D:/Github/ArduEasy/ArduEasyMaven/src/main/antlr4\ArduEasy.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ArduEasyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADDITIVEOPERATOR=1, SUBTRACTIVEOPERATOR=2, MULTIPLICATIVEOPERATOR=3, DIVISIONALOPERATOR=4, 
		MODULOOPERATOR=5, ASSIGNMENTOPERATOR=6, EQUALSOPERATOR=7, NEGATEOPERATOR=8, 
		BELOWOPERATOR=9, ABOVEOPERATOR=10, EQUALSORBELOWOPERATOR=11, EQUALSORABOVEOPERATOR=12, 
		ISNOTOPERATOR=13, ANDOPERATOR=14, OROPERATOR=15, LPAREN=16, RPAREN=17, 
		LBRACK=18, RBRACK=19, COLON=20, SEMICOLON=21, COMMA=22, INT=23, FLOAT=24, 
		PERCENTAGE=25, STRING=26, TIME=27, DAY=28, MONTH=29, STRUCT=30, BOOL=31, 
		VOIDDEC=32, INTDEC=33, FLOATDEC=34, STRINGDEC=35, CHARDEC=36, PERCENTAGEDEC=37, 
		STRUCTDEC=38, ARRAYDEC=39, TIMEDEC=40, DAYDEC=41, MONTHDEC=42, BOOLDEC=43, 
		SETUP=44, WHEN=45, FOR=46, WHILE=47, FUNCTION=48, PERFORM=49, TIMES=50, 
		UNTIL=51, IF=52, ELSE=53, SWITCH=54, CASE=55, DEFAULT=56, RETURN=57, AS=58, 
		A=59, PIN=60, INPUT=61, OUTPUT=62, INPUTPULLUP=63, IDENTIFIER=64, IGNORE=65;
	public static final int
		RULE_r = 0, RULE_setup = 1, RULE_functions = 2, RULE_function = 3, RULE_definitions = 4, 
		RULE_definition = 5, RULE_declaration = 6, RULE_parameters = 7, RULE_parameter = 8, 
		RULE_identifier = 9, RULE_statements = 10, RULE_statement = 11, RULE_ifElse = 12, 
		RULE_cases = 13, RULE_case_r = 14, RULE_logicalExpressions = 15, RULE_logicalExpression = 16, 
		RULE_expressions = 17, RULE_expression = 18, RULE_addSubExpression = 19, 
		RULE_multiDivExpression = 20, RULE_assignment = 21, RULE_value = 22, RULE_typeSpecifier = 23, 
		RULE_logicalOperator = 24, RULE_comparisonOperator = 25, RULE_returnType = 26, 
		RULE_pin = 27, RULE_ioStatus = 28;
	public static final String[] ruleNames = {
		"r", "setup", "functions", "function", "definitions", "definition", "declaration", 
		"parameters", "parameter", "identifier", "statements", "statement", "ifElse", 
		"cases", "case_r", "logicalExpressions", "logicalExpression", "expressions", 
		"expression", "addSubExpression", "multiDivExpression", "assignment", 
		"value", "typeSpecifier", "logicalOperator", "comparisonOperator", "returnType", 
		"pin", "ioStatus"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'*'", "'/'", "'%'", "'='", null, null, null, null, 
		null, null, null, null, null, "'('", "')'", "'{'", "'}'", "':'", "';'", 
		"','", null, null, null, null, null, null, null, "'changethispleasestruct'", 
		null, "'void'", "'int'", "'float'", "'string'", "'char'", "'percentage'", 
		"'struct'", "'array'", "'time'", "'day'", "'month'", "'bool'", "'setup'", 
		"'when'", "'for'", "'while'", "'function'", "'perform'", "'times'", "'until'", 
		"'if'", "'else'", "'switch'", "'case'", "'default'", "'return'", "'as'", 
		"'A'", "'PIN'", "'input'", "'output'", "'inputpullup'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ADDITIVEOPERATOR", "SUBTRACTIVEOPERATOR", "MULTIPLICATIVEOPERATOR", 
		"DIVISIONALOPERATOR", "MODULOOPERATOR", "ASSIGNMENTOPERATOR", "EQUALSOPERATOR", 
		"NEGATEOPERATOR", "BELOWOPERATOR", "ABOVEOPERATOR", "EQUALSORBELOWOPERATOR", 
		"EQUALSORABOVEOPERATOR", "ISNOTOPERATOR", "ANDOPERATOR", "OROPERATOR", 
		"LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "SEMICOLON", "COMMA", 
		"INT", "FLOAT", "PERCENTAGE", "STRING", "TIME", "DAY", "MONTH", "STRUCT", 
		"BOOL", "VOIDDEC", "INTDEC", "FLOATDEC", "STRINGDEC", "CHARDEC", "PERCENTAGEDEC", 
		"STRUCTDEC", "ARRAYDEC", "TIMEDEC", "DAYDEC", "MONTHDEC", "BOOLDEC", "SETUP", 
		"WHEN", "FOR", "WHILE", "FUNCTION", "PERFORM", "TIMES", "UNTIL", "IF", 
		"ELSE", "SWITCH", "CASE", "DEFAULT", "RETURN", "AS", "A", "PIN", "INPUT", 
		"OUTPUT", "INPUTPULLUP", "IDENTIFIER", "IGNORE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArduEasy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArduEasyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public SetupContext setup() {
			return getRuleContext(SetupContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ArduEasyParser.EOF, 0); }
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			setup();
			setState(59);
			functions();
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetupContext extends ParserRuleContext {
		public TerminalNode SETUP() { return getToken(ArduEasyParser.SETUP, 0); }
		public TerminalNode LBRACK() { return getToken(ArduEasyParser.LBRACK, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(ArduEasyParser.RBRACK, 0); }
		public SetupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterSetup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitSetup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitSetup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetupContext setup() throws RecognitionException {
		SetupContext _localctx = new SetupContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_setup);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(SETUP);
			setState(63);
			match(LBRACK);
			setState(64);
			definitions();
			setState(65);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterFunctions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitFunctions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functions);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				function();
				setState(68);
				functions();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				function();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode WHEN() { return getToken(ArduEasyParser.WHEN, 0); }
		public TerminalNode LPAREN() { return getToken(ArduEasyParser.LPAREN, 0); }
		public LogicalExpressionsContext logicalExpressions() {
			return getRuleContext(LogicalExpressionsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ArduEasyParser.RPAREN, 0); }
		public TerminalNode LBRACK() { return getToken(ArduEasyParser.LBRACK, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(ArduEasyParser.RBRACK, 0); }
		public TerminalNode FUNCTION() { return getToken(ArduEasyParser.FUNCTION, 0); }
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(ArduEasyParser.RETURN, 0); }
		public TerminalNode VOIDDEC() { return getToken(ArduEasyParser.VOIDDEC, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(WHEN);
				setState(75);
				match(LPAREN);
				setState(76);
				logicalExpressions(0);
				setState(77);
				match(RPAREN);
				setState(78);
				match(LBRACK);
				setState(79);
				statements();
				setState(80);
				match(RBRACK);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(FUNCTION);
				setState(83);
				returnType();
				setState(84);
				identifier();
				setState(85);
				match(LPAREN);
				setState(86);
				parameters();
				setState(87);
				match(RPAREN);
				setState(88);
				match(LBRACK);
				setState(89);
				statements();
				setState(90);
				match(RETURN);
				setState(91);
				identifier();
				setState(92);
				match(RBRACK);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(FUNCTION);
				setState(95);
				match(VOIDDEC);
				setState(96);
				identifier();
				setState(97);
				match(LPAREN);
				setState(98);
				parameters();
				setState(99);
				match(RPAREN);
				setState(100);
				match(LBRACK);
				setState(101);
				statements();
				setState(102);
				match(RBRACK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definitions);
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTDEC:
			case FLOATDEC:
			case STRINGDEC:
			case CHARDEC:
			case PERCENTAGEDEC:
			case STRUCTDEC:
			case TIMEDEC:
			case DAYDEC:
			case MONTHDEC:
			case BOOLDEC:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				definition();
				setState(107);
				definitions();
				}
				break;
			case RBRACK:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ASSIGNMENTOPERATOR() { return getToken(ArduEasyParser.ASSIGNMENTOPERATOR, 0); }
		public PinContext pin() {
			return getRuleContext(PinContext.class,0);
		}
		public TerminalNode AS() { return getToken(ArduEasyParser.AS, 0); }
		public IoStatusContext ioStatus() {
			return getRuleContext(IoStatusContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definition);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				identifier();
				setState(113);
				match(ASSIGNMENTOPERATOR);
				setState(114);
				pin();
				setState(115);
				match(AS);
				setState(116);
				ioStatus();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				assignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ASSIGNMENTOPERATOR() { return getToken(ArduEasyParser.ASSIGNMENTOPERATOR, 0); }
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			typeSpecifier();
			setState(123);
			identifier();
			setState(124);
			match(ASSIGNMENTOPERATOR);
			setState(125);
			expressions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(ArduEasyParser.COMMA, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameters);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				parameter();
				setState(128);
				match(COMMA);
				setState(129);
				parameters();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				parameter();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			typeSpecifier();
			setState(136);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ArduEasyParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArduEasyListener ) ((ArduEasyListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArduEasyVisitor ) return ((ArduEasyVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}
